# Batch_Watch_Agentic_AI

./: .env  Frontend-UI.py  README.md  autosys.csv  batch_watch_app.py  dummy_data.py  generate.py  pyproject.toml  sla_logs.csv
batch_agentic/: README.md  pyproject.toml
batch_agentic/src/batch_agentic/: crew.py  main.py
batch_agentic/src/batch_agentic/config/: agents.yaml
