[project]
name = "batch_agentic"
version = "0.1.0"
description = "batch_agentic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
batch_agentic = "batch_agentic.main:run"
run_crew = "batch_agentic.main:run"
train = "batch_agentic.main:train"
replay = "batch_agentic.main:replay"
test = "batch_agentic.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
